// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Sheet - does not render with data-require-action if it is set to false 1`] = `
<div
  className="sheet"
  data-require-action={null}
>
  <section>
    

    <div
      className="sheet-header"
    >
      <h2
        className="mb-0"
      />
      <a
        className="sheet-close"
        href="#"
      >
        
			
        <Icon
          type="close"
        />
        
		
      </a>
    </div>
    <div
      className="sheet-content null"
    />
  </section>
</div>
`;

exports[`Component: Sheet - renders 1`] = `
<div
  className="sheet"
  data-require-action={null}
>
  <section>
    

    <div
      className="sheet-header"
    >
      <h2
        className="mb-0"
      />
      <a
        className="sheet-close"
        href="#"
      >
        
			
        <Icon
          type="close"
        />
        
		
      </a>
    </div>
    <div
      className="sheet-content null"
    />
  </section>
</div>
`;

exports[`Component: Sheet - renders with a close icon 1`] = `
<div
  className="sheet"
  data-require-action={null}
>
  <section>
    

    <div
      className="sheet-header"
    >
      <h2
        className="mb-0"
      />
      <a
        className="sheet-close"
        href="#"
      >
        
			
        <Icon
          type="close"
        />
        
		
      </a>
    </div>
    <div
      className="sheet-content null"
    />
  </section>
</div>
`;

exports[`Component: Sheet - renders with an ID 1`] = `
<div
  className="sheet"
  data-require-action={null}
  id="demo-sheet"
>
  <section>
    

    <div
      className="sheet-header"
    >
      <h2
        className="mb-0"
      />
      <a
        className="sheet-close"
        href="#"
      >
        
			
        <Icon
          type="close"
        />
        
		
      </a>
    </div>
    <div
      className="sheet-content null"
    />
  </section>
</div>
`;

exports[`Component: Sheet - renders with children 1`] = `
<div
  className="sheet"
  data-require-action={null}
>
  <section>
    

    <div
      className="sheet-header"
    >
      <h2
        className="mb-0"
      />
      <a
        className="sheet-close"
        href="#"
      >
        
			
        <Icon
          type="close"
        />
        
		
      </a>
    </div>
    <div
      className="sheet-content null"
    >
      Test
    </div>
  </section>
</div>
`;

exports[`Component: Sheet - renders with the data-require-action attribute 1`] = `
<div
  className="sheet"
  data-require-action={true}
>
  <section>
    

    <div
      className="sheet-header"
    >
      <h2
        className="mb-0"
      />
      <a
        className="sheet-close"
        href="#"
      >
        
			
        <Icon
          type="close"
        />
        
		
      </a>
    </div>
    <div
      className="sheet-content null"
    />
  </section>
</div>
`;
